--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,11 +8,17 @@ xmlns:th="http://www.thymeleaf.org">
     <title>Pituusvertailija</title>
 </head>
 <body>
-    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; text-align: center;">
+    <div style="padding-left: 5%; padding-top: 1%;">
+        <h4>Hei <span sec:authentication="name"></span>!</h4>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sign Out" class="btn btn-danger"/>
+        </form>
+    </div>
+    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 80vh; text-align: center;">
         <h1>Tervetuloa Pituusvertailulaskuriin</h1>
         <div style="margin-top: 20px;">
-            <a class="btn btn-success" href="/laskuri" style="margin-right: 10px;">Laskuriin</a>
-            <a class="btn btn-success" href="/tuotteet">Tietoja laskurista</a>
+            <a class="btn btn-success" href="/vertailu" style="margin-right: 10px;">Vertailulaskuriin</a>
+            <a class="btn btn-success" href="/esineet">Esinelistaus</a>
         </div>
     </div>
 </body>
